# NutrientsTracker

./: CMakeLists.txt  NutrientsAppDB.db  NutrientsTracker.qmlproject  NutrientsTracker.qmlproject.qtds  README.md  qmlmodules
content/: AddProductsView.qml  AddProductsViewForm.ui.qml  App.qml  AppSettings.qml  BottomBarForm.ui.qml  CMakeLists.txt  Constants.qml  FoodView.qml  FoodViewForm.ui.qml  HomePage.qml  HomePageForm.ui.qml  Mocks.qml  Screen01.ui.qml  SideBarForm.ui.qml  StatisticsViewForm.ui.qml
content/AddProductsView/: AddProductPopup.qml  FoodProductsScrollView.qml
content/AddProductsView/FoodProductItem/: FoodProductItem.qml  MacroMicroDataColumn.qml
content/Calendar/: CalendarDialog.qml  RangeCalendarDialog.qml  YearMonthDialog.qml
content/Custom/: AddProductTextField.qml  CalendarPopup.qml
content/FoodView/: AddEatenFoodPopup.qml  FoodModel.qml  FoodScrollView.qml  FoodScrollViewForm.ui.qml
content/FoodView/FoodItem/: FoodItem.qml  FoodItemForm.ui.qml
imports/: CMakeLists.txt
imports/NutrientsTracker/: CMakeLists.txt  qmldir
imports/NutrientsTracker/designer/: plugin.metainfo
src/: import_qml_plugins.h  main.cpp
src/backend/: BackEnd.cpp  BackEnd.h  DBReadWrite.cpp  DBReadWrite.h  HelpersCppDataToVecOfStrings.cpp  HelpersCppDataToVecOfStrings.h  HelpersQtToCpp.cpp  HelpersQtToCpp.h  QtBackEnd.cpp  QtBackEnd.h
src/backend/DBdata/: EatenFood.h  FoodProduct.h
src/backend/QtModels/: QtDayFilterEatenFoodModel.cpp  QtDayFilterEatenFoodModel.h  QtEatenFoodModel.cpp  QtEatenFoodModel.h  QtFoodProductsModel.cpp  QtFoodProductsModel.h
